--- a/public/css/itelPage.css
+++ b/public/css/itelPage.css
@@ -238,18 +238,23 @@ margin-left: 10px;
   color: white;
 }
 .burger-nav #link{
+  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 600;
  padding: 0px;
  height: 30px;
+ width: auto;
+
 }
 #link .left{
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  }
+display: flex;
+align-items: center;
+width: 195px;
+height: 30px;
+padding: 0%;
+}
 #link .left i{
 font-size: 1.2rem;
 color: grey;  
@@ -257,7 +262,6 @@ margin-right: 20px;
 }
 
 /* burger menu ici  */
-
 
 /* mon panier ici  */
 .monPanier {
